--- a/index.html
+++ b/index.html
@@ -9,13 +9,53 @@
 </head>
 <body>
     <header>
-
+        <img class="logo" src="img/logo.svg" alt="Logo Booleaner">
     </header>
     <main>
-
+        <h1></h1>
+        <h2></h2>
+        <span></span>
+        <img src="" alt="">
+        <img src="" alt="">
+        <span></span>
+        <p></p>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+        <p></p>
     </main>
     <footer>
-
+        <h2></h2>
+        <div></div>
+        <div></div>
     </footer>
 </body>
 </html>
