--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
         <h2>Scrito da The Booleaner</h2>
         <span>il 10/10/2020</span>
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="img/tim-1.jpg" alt="">
+        <img src="img/tim-2.jpg" alt="">
         <span>1st Photo; John S. and James L. Knight Foundation, by Scott Henrichsen <br>
         2nd Photo: Wikimedia, by Paul Clarke</span>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum aspernatur minima dicta, pariatur corporis optio vel magni est eveniet provident vero saepe animi laudantium labore debitis doloremque repellat ad. Non porro quam, nisi corrupti ipsa, quia beatae consequuntur quod, accusamus nobis ratione dolor! Excepturi reprehenderit, eius facilis doloremque quae eum nesciunt quas nam provident vero earum eos rerum dolorem deserunt. Libero reprehenderit cumque asperiores doloribus totam quae quos commodi beatae dolorum illum molestias numquam iste vel, nobis molestiae quaerat. Ducimus soluta inventore ipsam nihil molestias ut dolorum, quo ab illum minus amet eveniet! Recusandae ab tempore, modi tenetur officiis nesciunt.</p>
