--- a/index.html
+++ b/index.html
@@ -12,14 +12,27 @@
         <img src="img/logo.svg" alt="Logo Booleaner">
     </header>
     <main>
-        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-        <h2>Scrito da The Booleaner</h2>
-        <span>il 10/10/2020</span>
-        <img src="img/tim-1.jpg" alt="">
-        <img src="img/tim-2.jpg" alt="">
-        <span>1st Photo; John S. and James L. Knight Foundation, by Scott Henrichsen <br>
-        2nd Photo: Wikimedia, by Paul Clarke</span>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum aspernatur minima dicta, pariatur corporis optio vel magni est eveniet provident vero saepe animi laudantium labore debitis doloremque repellat ad. Non porro quam, nisi corrupti ipsa, quia beatae consequuntur quod, accusamus nobis ratione dolor! Excepturi reprehenderit, eius facilis doloremque quae eum nesciunt quas nam provident vero earum eos rerum dolorem deserunt. Libero reprehenderit cumque asperiores doloribus totam quae quos commodi beatae dolorum illum molestias numquam iste vel, nobis molestiae quaerat. Ducimus soluta inventore ipsam nihil molestias ut dolorum, quo ab illum minus amet eveniet! Recusandae ab tempore, modi tenetur officiis nesciunt.</p>
+        <h1>
+            Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
+        </h1>
+        <h2>
+            Scrito da The Booleaner
+        </h2>
+        <h3>
+            il 10/10/2020
+        </h3>
+        <div>
+            <img src="img/tim-1.jpg" alt="Tim Berners-Lee at Knight Foundation">
+            <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
+        </div>
+        <span>
+            1st Photo; John S. and James L. Knight Foundation, by Scott Henrichsen
+            <br>
+            2nd Photo: Wikimedia, by Paul Clarke
+        </span>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum aspernatur minima dicta, pariatur corporis optio vel magni est eveniet provident vero saepe animi laudantium labore debitis doloremque repellat ad. Non porro quam, nisi corrupti ipsa, <mark>quia beatae consequuntur quod</mark>, accusamus nobis ratione dolor! Excepturi reprehenderit, eius facilis doloremque quae eum nesciunt quas nam provident vero earum eos rerum dolorem deserunt. Libero reprehenderit cumque asperiores doloribus totam quae quos commodi beatae dolorum illum molestias numquam iste vel, nobis molestiae quaerat. Ducimus soluta inventore ipsam nihil molestias ut dolorum, quo ab illum minus amet eveniet! Recusandae ab tempore, modi tenetur officiis nesciunt.
+        </p>
         <ul>
             <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est eius eveniet mollitia laboriosam, iusto distinctio, explicabo hic aperiam facere repellat harum dolores ullam nisi, natus dignissimos voluptatum? Magnam, quo magni!</li>
             <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia quisquam sed totam delectus repellendus, ducimus eum eaque dicta sint dolor iure, ipsam obcaecati! Incidunt, corrupti et facere voluptatibus at vitae.</li>
@@ -51,12 +64,14 @@
                 </tr>
             </tbody>
         </table>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos laboriosam ex omnis accusamus consequatur explicabo dolores sit quisquam laborum eos saepe voluptates sunt earum voluptas recusandae minus consequuntur assumenda, laudantium molestias sint, reprehenderit aliquid. Modi cumque autem consequuntur optio quasi, velit ab fuga, sunt labore, cupiditate unde officiis dolorem impedit quibusdam recusandae dignissimos repellendus exercitationem hic accusantium sed laborum dicta possimus! Voluptatum, repellendus optio officia esse consequatur sequi iste. Atque exercitationem vitae earum voluptates nesciunt molestias error vero, deserunt veniam id perspiciatis ex placeat fuga necessitatibus? Totam possimus iste commodi assumenda vel modi tempore esse at, voluptatem quod ex veritatis.</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos laboriosam ex omnis accusamus consequatur explicabo dolores sit quisquam laborum eos saepe voluptates sunt earum voluptas recusandae minus consequuntur assumenda, laudantium molestias sint, reprehenderit aliquid. Modi cumque autem consequuntur optio quasi, velit ab fuga, sunt labore, cupiditate unde officiis dolorem impedit quibusdam recusandae dignissimos repellendus <mark>hic accusantium sed laborum dicta possimus!</mark> Voluptatum, repellendus optio officia esse consequatur sequi iste. Atque exercitationem vitae earum voluptates nesciunt molestias error vero, deserunt veniam id perspiciatis ex placeat fuga necessitatibus? Totam possimus iste commodi assumenda vel modi tempore esse at, voluptatem quod ex veritatis.
+        </p>
     </main>
     <footer>
         <h2>Potrebbero interessarti</h2>
-        <div></div>
-        <div></div>
+        <div>Lorem ipsim dolor</div>
+        <div>Lorem ipsim dolor</div>
     </footer>
 </body>
 </html>
