--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.svg" alt="Logo Booleaner">
+        <img class="logo" src="img/logo.svg" alt="Logo Booleaner">
     </header>
     <main>
         <h1>
