image rezising within news

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             il 10/10/2020
         </h3>
         <div>
-            <img src="img/tim-1.jpg" alt="Tim Berners-Lee at Knight Foundation">
-            <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
+            <img class="newspic" src="img/tim-1.jpg" alt="Tim Berners-Lee at Knight Foundation">
+            <img class="newspic" src="img/tim-2.jpg" alt="Tim Berners-Lee">
         </div>
         <span>
             1st Photo; John S. and James L. Knight Foundation, by Scott Henrichsen
