--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr class="odd">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quisquam alias soluta debitis. Quasi numquam eum excepturi cum aspernatur sapiente similique culpa fugiat, suscipit tempore, sint quam nisi? Blanditiis, nobis!</td>
                 </tr>
-                <tr>
+                <tr class="even">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quisquam alias soluta debitis. Quasi numquam eum excepturi cum aspernatur sapiente similique culpa fugiat, suscipit tempore, sint quam nisi? Blanditiis, nobis!</td>
                 </tr>
-                <tr>
+                <tr class="odd">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quisquam alias soluta debitis. Quasi numquam eum excepturi cum aspernatur sapiente similique culpa fugiat, suscipit tempore, sint quam nisi? Blanditiis, nobis!</td>
