changed margins and color of h2 and h3

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     </main>
     <footer>
         <h2>Potrebbero interessarti</h2>
-        <div class="othernews">Lorem ipsim dolor</div>
-        <div class="othernews">Lorem ipsim dolor</div>
+        <div class="othernews">Lorem ipsum dolor</div>
+        <div class="othernews">Lorem ipsum dolor</div>
     </footer>
 </body>
 </html>
