footer images, style and minor fixes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
         </h1>
         <h2>
-            Scrito da The Booleaner
+            Scrito da <span class="booleaner">The Booleaner</span> 
         </h2>
         <h3>
             il 10/10/2020
@@ -24,12 +24,10 @@
         <div>
             <img class="newspic" src="img/tim-1.jpg" alt="Tim Berners-Lee at Knight Foundation">
             <img class="newspic" src="img/tim-2.jpg" alt="Tim Berners-Lee">
+            <p>1st Photo; John S. and James L. Knight Foundation, by Scott Henrichsen</p>            
+            <p>2nd Photo: Wikimedia, by Paul Clarke</p>
         </div>
-        <span>
-            1st Photo; John S. and James L. Knight Foundation, by Scott Henrichsen
-            <br>
-            2nd Photo: Wikimedia, by Paul Clarke
-        </span>
+        
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum aspernatur minima dicta, pariatur corporis optio vel magni est eveniet provident vero saepe animi laudantium labore debitis doloremque repellat ad. Non porro quam, nisi corrupti ipsa, <mark>quia beatae consequuntur quod</mark>, accusamus nobis ratione dolor! Excepturi reprehenderit, eius facilis doloremque quae eum nesciunt quas nam provident vero earum eos rerum dolorem deserunt. Libero reprehenderit cumque asperiores doloribus totam quae quos commodi beatae dolorum illum molestias numquam iste vel, nobis molestiae quaerat. Ducimus soluta inventore ipsam nihil molestias ut dolorum, quo ab illum minus amet eveniet! Recusandae ab tempore, modi tenetur officiis nesciunt.
         </p>
@@ -70,8 +68,14 @@
     </main>
     <footer>
         <h2>Potrebbero interessarti</h2>
-        <div class="othernews">Lorem ipsum dolor</div>
-        <div class="othernews">Lorem ipsum dolor</div>
+        <div class="othernews">
+            <img src="img/monitor.jpg" alt="Monitor">
+            <div class="top-left">Lorem ipsum dolor</div>
+        </div>
+        <div class="othernews">
+            <img src="img/graph.jpg" alt="Monitor">
+            <div class="top-left">Lorem ipsum dolor</div>
+        </div> 
     </footer>
 </body>
 </html>
